--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <span>°F</span>
     </div>
    
-    <div class="temperature-description">It's so cold</div>
+    <div class="temperature-description">🗺 Allow your location access 🗺</div>
 </div>
 
 
